# trigen

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile-nightly  README.md  conanfile.txt
cylindergen/: CMakeLists.txt  future_union_mesh.h  general.h  generic.vsh.glsl  glres.h  lindenmayer.h  main.cpp  meshbuilder.h  stdafx.h  trunk_generator.cpp  trunk_generator.h
demo/: CMakeLists.txt  async_image_loader.h  demo.cpp  iapplication.h  playback.cpp  playback.h  scene.cpp  scene.h  scene_basic_cube.cpp  scene_loader.cpp  scene_loader.h
dual_contouring/: CMakeLists.txt  dual_contouring.cpp  main.tests.cpp  octree.h  octree.tests.cpp
editor/: CMakeLists.txt  application.cpp  application.h  arcball_camera.cpp  arcball_camera.h  collider_component.h  collimp.h  collimp_obj.cpp  dlg_meshgen.cpp  dlg_meshgen.h  dlg_meshgen.ui  entity_list.cpp  entity_list.h  entry.cpp  events.h  filament_factory.cpp  filament_factory.h  filament_viewport.cpp  filament_viewport.h  filament_wrapper.h  framebuffer.cpp  main_window.h  mesh_collider.h  mesh_render_component.h  plant_component.h  r_gl.cpp  r_renderer.h  render_queue.h  renderer.cpp  renderer.h  resources.qrc  session.cpp  session.h  softbody_renderer.cpp  softbody_renderer.h  stdafx.h  tiny_obj_loader.cpp  transform_component.h  tree_renderer.cpp  tree_renderer.h  (+28 more)
embed/: CMakeLists.txt  main.c  main.cpp  stdafx.h  utils.c  utils.h
imgui/: CMakeLists.txt
libs/: CMakeLists.txt
libs/arcball_camera/: CMakeLists.txt
libs/arcball_camera/include/: arcball_camera.h
libs/arcball_camera/src/: arcball_camera.cpp
libs/foliage/: CMakeLists.txt
libs/foliage/include/: foliage.hpp
libs/foliage/src/: foliage.cpp
libs/glad/: CMakeLists.txt
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/imgui/src/: imgui_impl_opengl3.cpp
libs/intersect/: CMakeLists.txt
libs/intersect/include/: intersect.h
libs/intersect/src/: ray_aabb.cpp  ray_sphere.cpp  ray_triangle.cpp
libs/marching_cubes/: CMakeLists.txt
libs/marching_cubes/include/: marching_cubes.h
libs/marching_cubes/src/: main.cpp
libs/mesh_compress/: CMakeLists.txt
libs/mesh_compress/examples/: quad.c
libs/mesh_compress/src/: arena.cpp  arena.h  common.h  compression.cpp  dbgmsg.cpp  dbgmsg.h  mesh_compress.cpp  resource_management.cpp  stdafx.h
libs/mesh_export/: CMakeLists.txt
libs/mesh_export/include/: mesh_export.h
libs/mesh_export/src/: fbx_export.cpp  fbx_standard_surface.cpp  fbx_standard_surface.h  stdafx.h
libs/metadesk/: CMakeLists.txt
libs/psp/: CMakeLists.txt
libs/psp/src/: painting.cpp  painting.h  painting2.cpp  psp.cpp  stdafx.h  uv_quadtree.cpp  uv_quadtree.h  uv_unwrap.cpp  uv_unwrap.h
libs/render_commands/: CMakeLists.txt
libs/render_commands/src/: r_general.cpp  r_softbody.cpp  stdafx.h
libs/renderer_qt/: CMakeLists.txt
libs/renderer_qt/include/: glviewport.h  imgui_impl_qt.h
libs/renderer_qt/src/: glviewport.cpp  imgui_impl_qt.cpp
libs/softbody/: CMakeLists.txt
libs/softbody/docs/: IMAGE_FORMAT.md
libs/softbody_ext/: CMakeLists.txt
libs/stb/: CMakeLists.txt
libs/topo/: CMakeLists.txt
libs/topo_qt/: CMakeLists.txt
libs/trigen/: CMakeLists.txt
libs/trigen-net/: CMakeLists.txt
libs/uv_inspect/: CMakeLists.txt
libs/virtfs/: CMakeLists.txt
mesh_paint_proto/: CMakeLists.txt  application.cpp  application.h  entry.cpp  events.h  fbx_export.cpp  fbx_export.h  fbx_standard_surface.cpp  fbx_stingray_pbs.cpp  fbx_stingray_pbs.h  session.cpp  session.h  stdafx.h
objscan/: CMakeLists.txt  blender-import.py  intersection.cpp  intersection.h  job_system.h  mesh.h  objscan.cl  objscan.cpp  objscan_math.cpp  objscan_math.h  stdafx.h  test.cpp
psp/: CMakeLists.txt
psp/src/: painting.cpp  psp.cpp  uv_unwrap.cpp
renderer/: CMakeLists.txt  r_gl.cpp  r_gl_shadercompiler.h  r_sdl.cpp
renderer/include/: r_renderer.h  r_sdl.h
renderer/src/: gbuffer.cpp  gbuffer.h  gl.h  glres.h  r_gl.cpp  r_gl_shadercompiler.cpp  r_gl_shadercompiler.h  r_sdl.cpp  shader_generic.cpp  shader_generic.h  shader_program_builder.cpp  shader_program_builder.h  stdafx.h
renderer_demo/: CMakeLists.txt  ds_entry.cpp
softbody/: CMakeLists.txt  c_particle.cpp  c_particle.tests.cpp  common.h  cuda_linalg.cuh  cuda_memtrack.cpp  cuda_memtrack.h  cuda_templates.cu  cuda_utils.cuh  f_serialization.cpp  f_serialization.h  f_serialization.internal.h  f_serialization.tests.cpp  l_constexpr_map.h  l_iterators.h  l_random.h  m_sdf.cpp  m_sdf.h  m_utils.cpp  m_utils.h  m_utils.tests.cpp  s_benchmark.h  s_compute_backend.h  s_compute_cl.cpp  s_compute_cuda.cpp  s_compute_cuda.cu  s_compute_cuda.h  s_compute_cuda_codegen.cpp  s_compute_cuda_codegen.h  s_compute_cuda_kernels.cu  s_compute_ref.cpp  s_ext.h  s_ext_cloth.cpp  s_ext_plant.cpp  s_ext_rope.cpp  s_iterators.cpp  s_simulation.cpp  s_simulation.h  stdafx.h  tests.main.cpp
softbody/rt_intersect/: CMakeLists.txt
softbody/src/: CMakeLists.txt  c_particle.cpp  c_particle.h  cuda_templates.cu  cuda_utils.cuh  f_serialization.h  f_serialization.tests.cpp  m_utils.h  s_compute_backend.h  s_compute_cl.cpp  s_compute_cuda.h  s_compute_cuda_codegen.h  s_compute_cuda_kernels.cu  s_ext_plant.cpp
softbody_testbed/: CMakeLists.txt  application.cpp  arcball_camera.cpp  entry.cpp  r_gl.cpp  r_queue.h  r_renderer.h  softbody_renderer.cpp  softbody_renderer.h
testbed_qt/: CMakeLists.txt  arcball_camera.cpp  arcball_camera.h  colliders.cpp  colliders.h  common.h  debug_visualizer.cpp  debug_visualizer.h  fault_detector.cpp  fault_detector.h  file_serializer.cpp  glviewport.cpp  glviewport.h  glviewport.ui  helper_ui_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_export.h  model_export_fbx.cpp  resources.qrc  sb_fault_detector_exception.ui  sim_config.ui  sim_control.ui  softbody_renderer.cpp  softbody_renderer.h  vm_main.cpp  vm_main.h  wnd_fault_detector.cpp  wnd_fault_detector.h  wnd_main.cpp  wnd_main.h  wnd_meshgen.cpp  wnd_meshgen.h
testbed_qt/ui/: collider_frame.ui  collider_sphere.ui
(+190 files in other folders)
