add_subdirectory(glad)
add_subdirectory(imgui)
add_subdirectory(psp)
add_subdirectory(arcball_camera)
add_subdirectory(softbody_ext)
add_subdirectory(stb)
add_subdirectory(intersect)
add_subdirectory(marching_cubes)
add_subdirectory(mesh_export)
add_subdirectory(render_commands)
add_subdirectory(softbody)

add_subdirectory(renderer_qt)
add_subdirectory(trigen)