option(TRIGEN_MODULAR_BUILD "" OFF)

add_subdirectory(glad)
add_subdirectory(metadesk)
add_subdirectory(virtfs)
add_subdirectory(imgui)
add_subdirectory(psp)
add_subdirectory(foliage)
add_subdirectory(arcball_camera)
add_subdirectory(softbody_ext)
add_subdirectory(stb)
add_subdirectory(intersect)
add_subdirectory(marching_cubes)
add_subdirectory(mesh_compress)
add_subdirectory(mesh_export)
add_subdirectory(topo)
add_subdirectory(topo_qt)
add_subdirectory(render_commands)
add_subdirectory(softbody)
add_subdirectory(uv_inspect)

add_subdirectory(renderer_qt)
add_subdirectory(trigen)
add_subdirectory(trigen-net)